tests/samples/invalid/ambiguous_bit_integer.pn
fn main()
{
	var x = 0x46252a3 as u32;
}
